# pronto

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
examples/anymal_b/anymal_b_robcogen/: CMakeLists.txt  package.xml
examples/anymal_b/pronto_anymal_b/: CMakeLists.txt  package.xml
examples/anymal_b/pronto_anymal_b_commons/: CMakeLists.txt  README.md  package.xml
filter_tools/: CMakeLists.txt  package.xml
filter_tools/include/filter_tools/: Filter.hpp  SignalTap.hpp  backlash_filter.hpp  simple_kalman_filter.hpp  torque_adjustment.hpp
filter_tools/src/: Filter.cpp  HeavyLowPassFilter.cpp  SignalTap.cpp  alpha_filter.cpp  backlash_filter.cpp  kalman_filter.cpp  simple_kalman_filter.cpp  torque_adjustment.cpp
filter_tools/test/: filtering_demo.cpp  kalman_filter_demo.cpp
pronto_biped_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_biped_core/include/pronto_biped_core/: FootContact.hpp  FootContactAlt.hpp  biped_forward_kinematics.hpp  common_conversions.hpp  definitions.hpp  foot_contact_classify.hpp  leg_estimate.hpp  legodo_common.hpp  legodo_module.hpp  yawlock_common.hpp  yawlock_module.hpp
pronto_biped_core/python/: collections_test.py  send-a-pose.py  send-fake-imu-ros.py  send-fake-imu.py  send_a_robot_state_anymal.py  state-sync-simple-multisense-standalone.py  state-sync-simple.py  test_pose_command.py
pronto_biped_core/src/: FootContact.cpp  FootContactAlt.cpp  foot_contact_classify.cpp  leg_estimate.cpp  legodo_common.cpp  legodo_module.cpp  yawlock_common.cpp  yawlock_module.cpp
pronto_biped_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_biped_ros/include/pronto_biped_ros/: forward_kinematics_ros.hpp  legodo_handler_ros.hpp  treefksolverposfull_recursive.hpp  yaw_lock_handler_ros.hpp
pronto_biped_ros/src/: forward_kinematics_ros.cpp  legodo_handler_ros.cpp  treefksolverposfull_recursive.cpp  yaw_lock_handler_ros.cpp
pronto_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_core/include/pronto_core/: definitions.hpp  gps_module.hpp  indexed_meas_module.hpp  init_message_module.hpp  ins_module.hpp  lidar_odometry_module.hpp  mav_state_est.hpp  pose_meas_module.hpp  rbis.hpp  rbis_update_interface.hpp  rigidbody.hpp  rotations.hpp  scan_matcher_module.hpp  sensing_module.hpp  state_est.hpp  update_history.hpp  vicon_module.hpp  visual_odometry_module.hpp
pronto_core/launch/: parameter_test.launch
pronto_core/src/: gps_module.cpp  indexed_meas_module.cpp  init_message_module.cpp  ins_module.cpp  lidar_odometry_module.cpp  mav_state_est.cpp  pose_meas_module.cpp  rbis.cpp  rbis_update_interface.cpp  rigidbody.cpp  rotations.cpp  scan_matcher_module.cpp  state_est.cpp  update_history.cpp  vicon_module.cpp  visual_odometry_module.cpp
pronto_core/test/: imu_module_test.cpp
pronto_estimate_tools/: CMakeLists.txt  package.xml
pronto_estimate_tools/include/pronto_estimate_tools/: imu_stream.hpp
pronto_estimate_tools/src/: iir_notch.cpp  imu_stream.cpp
pronto_estimator_lcm/: CMakeLists.txt  package.xml
pronto_estimator_lcm/include/pronto_estimator_lcm/: atlas_ins_handler.hpp  (+14 more)
pronto_estimator_lcm/src/: atlas_ins_handler.cpp  gps_handler.cpp  index_meas_handler.cpp  init_message_handler.cpp  ins_handler.cpp  lcm_front_end.cpp  optical_flow_handler.cpp  pose_meas_handler.cpp  rbis_fovis_update.cpp  rbis_initializer.cpp  scan_matcher_handler.cpp  vicon_handler.cpp
pronto_estimator_lcm/test/: bot_trans_eigen_conversion_test.cpp
pronto_math/: CMakeLists.txt  package.xml
pronto_math/src/: pronto_math.cpp  test_transforms.cpp
pronto_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_msgs/msg/: ControllerFootContact.msg  FilterState.msg  GPSData.msg  IndexedMeasurement.msg  JointStateWithAcceleration.msg  LidarOdometryUpdate.msg  QuadrupedForceTorqueSensors.msg  QuadrupedStance.msg  VelocityWithSigmaBounds.msg  VisualOdometryUpdate.msg
pronto_quadruped/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_quadruped/doc/: Doxyfile.in  README.md
pronto_quadruped/src/: DataLogger.cpp  DynamicStanceEstimator.cpp  FlexEstimator.cpp  FootSensorStanceDetector.cpp  ForceSensorStanceEstimator.cpp  ImuBiasLock.cpp  LegOdometer.cpp  StanceDetector.cpp  StanceEstimator.cpp
pronto_quadruped_commons/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_quadruped_commons/doc/: Doxyfile.in
pronto_quadruped_commons/include/: iit
pronto_quadruped_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_quadruped_ros/src/: bias_lock_handler_ros.cpp  conversions.cpp  dls_state_estimator_ros_node.cpp  dynamic_stance_estimator_ros.cpp  foot_sensor_stance_detector_ros.cpp  force_sensor_stance_estimator_ros.cpp  leg_odometer_ros.cpp  legodo_handler_ros.cpp  stance_estimator_ros.cpp
pronto_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_ros/src/: gps_ros_handler.cpp  index_meas_ros_handler.cpp  init_message_ros_handler.cpp  ins_ros_handler.cpp  joint_state_with_acceleration_republisher.cpp  lidar_odom_viz.cpp  lidar_odometry_ros_handler.cpp  pose_msg_ros_handler.cpp  pronto_ros_conversions.cpp  pronto_ros_node.cpp  ros_frontend.cpp  scan_matcher_ros_handler.cpp  vicon_ros_handler.cpp  visual_odometry_ros_handler.cpp
pronto_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
pronto_utils/src/: :wq  BipolarSchmittTrigger.cpp  CumulativeAverage.cpp  DataFileLogger.cpp  DistributedDiff.cpp  ExpireTimer.cpp  Filter.cpp  Gaussian.cpp  HeavyLowPassFilter.cpp  MedianFilter.cpp  NumericalDiff.cpp  RateChange.cpp  SchmittTrigger.cpp  SignalTap.cpp  TrapezoidalInt.cpp  alpha_filter.cpp  backlash_filter.cpp  kalman_filter.cpp  simple_kalman_filter.cpp  torque_adjustment.cpp
src/mav_state_est/: CMakeLists.txt  atlas_ins_handler.cpp  gps_handler.cpp  index_meas_handler.cpp  init_message_handler.cpp  ins_handler.cpp  ins_module.cpp  ins_ros_handler.cpp  lcm_front_end.cpp  mav_state_est.cpp  optical_flow_handler.cpp  rbis.cpp  rbis_initializer.cpp  rbis_update_interface.cpp  ros_frontend.cpp  scan_matcher_handler.cpp  scan_matcher_module.cpp  sensor_handlers.cpp  update_history.cpp  vicon_handler.cpp
(+221 files in other folders)
