<?xml version="1.0"?>
<package>
  <name>pronto_estimator_core</name>
  <version>0.0.0</version>
  <description>The pronto_estimator_core package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mfallon@todo.todo">mfallon</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pronto_lcmtypes</build_depend>
  <build_depend>bot_core_lcmtypes</build_depend>
  <build_depend>bot_core</build_depend>
  <build_depend>bot_frames</build_depend>
  <build_depend>stl_utils</build_depend> 
  <build_depend>eigen_utils</build_depend>

  <run_depend>pronto_lcmtypes</run_depend>
  <run_depend>bot_core_lcmtypes</run_depend>
  <run_depend>bot_core</run_depend>
  <run_depend>bot_frames</run_depend>
  <run_depend>stl_utils</run_depend>
  <run_depend>eigen_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
