<?xml version="1.0"?>
<package>
  <name>pronto_estimator_core</name>
  <version>0.0.1</version>
  <description>
    The pronto_estimator_core package contains the EKF and the main 
    modules to perform state estimation, including: inertial, gps, optical
    flow, etc.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="abry@mit.edu">Adam Bry</author>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>
  
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pronto_lcmtypes</build_depend>
  <build_depend>bot_core_lcmtypes</build_depend>
  <build_depend>bot_core</build_depend>
  <build_depend>bot_frames</build_depend>
  <build_depend>stl_utils</build_depend> 
  <build_depend>eigen_utils</build_depend>

  <run_depend>pronto_lcmtypes</run_depend>
  <run_depend>bot_core_lcmtypes</run_depend>
  <run_depend>bot_core</run_depend>
  <run_depend>bot_frames</run_depend>
  <run_depend>stl_utils</run_depend>
  <run_depend>eigen_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
