<?xml version="1.0"?>
<package>
  <name>filter_tools</name>
  <version>0.0.0</version>
  <description>Description</description>
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPLv2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
