<?xml version="1.0"?>
<package format="2">
  <name>pronto_biped_core</name>
  <version>0.0.1</version>

  <description>Description</description>
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>

  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>

  <license>LGPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>filter_tools</depend>
  <depend>pronto_math</depend>
  <depend>pronto_core</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
