<?xml version="1.0"?>
<package format="2">
  <name>pronto_biped_ros</name>
  <version>0.2.0</version>
  <description>The pronto_biped_ros package</description>
  <license>LGPLv2.1</license>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pronto_biped_core</build_depend>
  <build_export_depend>pronto_biped_core</build_export_depend>
  <exec_depend>pronto_biped_core</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>pronto_ros</depend>
  <depend>kdl_parser</depend>
  <depend>tf2_eigen</depend>
</package>
