<?xml version="1.0"?>
<package format="2">
  <name>pronto_quadruped</name>
  <version>0.3.0</version>
  <description>The pronto_quadruped package</description>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pronto_quadruped_commons</depend>
  <depend>pronto_core</depend>
  <depend>pronto_utils</depend>
</package>
