<package format="2">
  <name>pronto_quadruped_commons</name>
  <version>0.2.0</version>
  <description>
        pronto_quadruped_commons
  </description>

  <author email="marco.frigerio@kuleuven.be">Marco Frigerio</author>
  <author email="michele.focchi@iit.it">Michele Focchi</author>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>

  <license>LGPLv2.1</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>
</package>
