<?xml version="1.0"?>
<package format="2">
  <name>pronto_quadruped_ros</name>
  <version>0.2.0</version>
  <description>The pronto_quadruped_ros package</description>

  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <url type="repository">https://github.com/ori-drs/pronto</url>

  <license>LGPLv2.1</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pronto_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pronto_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pronto_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>pronto_ros</depend>
  <depend>pronto_quadruped</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pronto_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen_conversions</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
